myapp/writer/style.css
/* ... */
.single-shop-info {
  color: #ffffff;
  text-align: center;
}
.shop-info-area {
  background: rgba(0, 0, 0, 0) url("img/shop-info-bg.jpg") no-repeat scroll
    center center;
  padding: 54px 0;
}
.shop-info-icon {
  background: #878787 none repeat scroll 0 0;
  border-radius: 50%;
  height: 140px;
  line-height: 140px;
  margin: 0 auto 23px;
  text-align: center;
  transition: all 0.3s ease 0s;
  width: 140px;
}
.shop-info-icon i {
  font-size: 80px;
}
.shop-info-content h2 {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 20px;
  text-transform: uppercase;
}
.shop-info-content > p {
  margin-bottom: 30px;
  padding: 0 30px;
}
.shop-info-content > a:hover {
  background: #32b5f3 none repeat scroll 0 0;
  border: 1px solid #32b5f3;
}
.shop-info-content > a {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: 1px solid #ffffff;
  border-radius: 30px;
  color: #ffffff;
  overflow: hidden;
  padding: 5px 25px;
}
.single-shop-info:hover .shop-info-icon {
  background: #32b5f3 none repeat scroll 0 0;
}
/*----------------------------------------*/
/*  6.	Featured Products Area CSS
/*----------------------------------------*/
.section-title {
  border-bottom: 1px solid #bbbbbb;
  border-top: 1px solid #bbbbbb;
  color: #555555;
  font-size: 21px;
  font-weight: 600;
  line-height: 1;
  margin-bottom: 0;
  padding: 18.5px 0;
  position: relative;
  text-align: center;
  text-transform: uppercase;
}
.section-title::before {
  background: #bbbbbb none repeat scroll 0 0;
  content: "";
  height: 58px;
  position: absolute;
  right: 524px;
  top: 0;
  width: 1px;
}
.section-title::after {
  background: #bbbbbb none repeat scroll 0 0;
  content: "";
  height: 58px;
  left: 524px;
  position: absolute;
  top: 0;
  width: 1px;
}
.tab-menu ul.nav-tabs {
  border: medium none;
  text-align: center;
}
.tab-menu ul.nav-tabs > li::before {
  background: #8b8b8b none repeat scroll 0 0;
  content: "";
  display: block;
  height: 1px;
  left: -7px;
  position: absolute;
  top: 8px;
  width: 10px;
}
.tab-menu ul.nav-tabs li.first-item a {
  padding-left: 0;
}
.tab-menu ul.nav-tabs > li.active > a,
.tab-menu ul.nav-tabs > li.active > a:focus,
.tab-menu ul.nav-tabs > li.active > a:hover {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: medium none;
  color: #444444;
  cursor: pointer;
}
.tab-menu ul.nav-tabs > li a {
  border: medium none;
  color: #bbbbbb;
  cursor: pointer;
  margin-right: 0;
  padding: 0 10px;
  position: relative;
  text-transform: uppercase;
}
.tab-menu ul.nav-tabs > li > a:hover {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: medium none;
  text-decoration: none;
}
.tab-menu .nav-tabs > li {
  display: inline-block;
  float: none;
  margin-bottom: 0;
  margin-top: 20px;
}
.single-banner {
  border: 1px solid #ddd;
  margin-top: 30px;
  position: relative;
  transition: all 0.4s ease 0s;
}
.featured-product-list .banner-bottom > a,
.shop-single-product-area .banner-bottom > a {
  font-size: 14px;
  padding: 14px 0;
}
.featured-product-list .price,
.shop-single-product-area .price {
  font-size: 16px;
  position: absolute;
  right: 14px;
  top: 10px;
}
.banner-bottom {
  border-top: 1px solid #ddd;
  overflow: hidden;
  padding: 10px 0;
}
.icolor {
  color: #32b5f3 !important;
}
.rating-icon i {
  color: #666666;
  transition: all 0.3s ease 0s;
}
.indicator-style.owl-theme .owl-controls .owl-buttons div {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: 1px solid #7f7f7f;
  border-radius: 2px;
  color: #7f7f7f;
  display: inline-block;
  font-size: 18px;
  height: 20px;
  left: 15px;
  line-height: 18px;
  margin: 0;
  opacity: 1;
  padding: 0;
  position: absolute;
  text-align: center;
  top: -100px;
  transition: all 0.3s ease 0s;
  width: 20px;
}
.indicator-style.owl-theme .owl-controls .owl-buttons div.owl-next {
  right: 15px;
  left: auto;
}
.functional-buttons > a {
  border: 1px solid #ffffff;
  border-radius: 50px;
  color: #ffffff;
  display: inline-block;
  font-size: 18px;
  height: 42px;
  margin-left: 5px;
  text-align: center;
  width: 42px;
}
.functional-buttons > a:hover {
  background: #32b5f3 none repeat scroll 0 0;
  border: 1px solid #32b5f3;
}
.functional-buttons > a i {
  line-height: 42px;
}
.functional-buttons {
  text-align: center;
}
.product-description {
  left: 0;
  margin-top: -22px;
  opacity: 0;
  position: absolute;
  top: 50%;
  transition: all 0.3s ease 0s;
  width: 100%;
}
.product-wrapper {
  position: relative;
}
.single-banner-image-wrapper {
  display: block;
  position: relative;
}
.single-banner-image-wrapper::before {
  background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
  content: "";
  height: 100%;
  position: absolute;
  transition: all 0.3s ease 0s;
  width: 100%;
  opacity: 0;
}
.single-banner:hover .product-description,
.single-banner:hover .single-banner-image-wrapper::before {
  opacity: 1;
}
.single-banner:hover .price {
  color: #ffffff;
}
.product-list {
  margin-top: 20px;
}
/*----------------------------------------*/
/*  7.	Testimonial Area CSS
/*----------------------------------------*/
.testimonial-area {
  background: rgba(0, 0, 0, 0) url("img/testimonial/bg.jpg") no-repeat scroll
    center center;
  color: #ffffff;
  padding-bottom: 100px;
  padding-top: 70px;
}
.single-testimonial > img {
  border: 4px solid #41addb;
  border-radius: 50%;
  height: 110px;
  margin-bottom: -55px;
  width: 110px;
}
.testimonial-title > h2 {
  font-size: 22px;
  font-weight: 600;
  text-transform: uppercase;
}
.testmonial-info {
  background: #ffffff none repeat scroll 0 0;
  border-radius: 30px;
  color: #444444;
  display: block;
  margin: 0 auto;
  padding: 97px 17% 0;
  width: 75%;
}
.testimonial-area h3 {
  font-size: 14px;
  margin-bottom: 0;
}
.testimonial-author > p {
  margin-bottom: 23px;
}
.single-testimonial > p::after {
  color: #868686;
  content: "";
  font-family: fontawesome;
  font-size: 30px;
  left: -17px;
  position: absolute;
  top: -37px;
}
/* ... */

